--- a/index.html
+++ b/index.html
@@ -26,10 +26,11 @@
             border-radius: 15px;
             box-shadow: 0px 15px 30px rgba(0, 0, 0, 0.4), inset 0 0 10px rgba(0, 0, 0, 0.2);
             width: 170px;
+            height:180px;
       
             text-align: center;
             position: absolute;
-            top: 70%;
+            top: 65%;
             left: 65%;
             transform-origin: center;
             animation: popIn 1.5s ease-out forwards;
