--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
 <body>
     <div class="login-container">
         <h2>Welcome Scorer</h2>
-        <img src="logo.jpeg" alt="Logo" class="logo">
+        <img src="logo.png" alt="Logo" class="logo">
         <form id="login-form">
             <label for="username">User ID :</label>
             <input type="text" id="username" name="username" placeholder="Enter your user id" required>
