--- a/lib.html
+++ b/lib.html
@@ -70,8 +70,8 @@
 
         .book {
             position: absolute;
-            width: 100px; /* Adjust book width as needed */
-            height: 150px; /* Adjust book height as needed */
+            width: 50px; /* Adjust book width as needed */
+            height: 75px; /* Adjust book height as needed */
             border: 1px solid #fff;
             background: #fff;
             border-radius: 10px; /* Book-like shape */
@@ -156,38 +156,78 @@
             <div class="carousel-container" id="carousel8">
                 <div class="carousel" id="carouselContent8">
                     <div class="book" style="transform: rotateY(0deg) translateZ(200px);" onclick="openModal('path/to/class8_book1.pdf')">
-                        <img src="lib8 (1).jpg" alt="Class 8 Book 1">
+                        <img src="m91.jpg" alt="Class 8 Book 1">
                     </div>
-                    <div class="book" style="transform: rotateY(30deg) translateZ(200px);" onclick="openModal('path/to/class8_book2.pdf')">
-                        <img src="lib8 (1).jpg" alt="Class 8 Book 2">
+                    <div class="book" style="transform: rotateY(13deg) translateZ(200px);" onclick="openModal('path/to/class8_book2.pdf')">
+                        <img src="m92.jpg" alt="Class 8 Book 2">
                     </div>
-                    <div class="book" style="transform: rotateY(60deg) translateZ(200px);" onclick="openModal('path/to/class8_book3.pdf')">
-                        <img src="lib8 (2).jpg" alt="Class 8 Book 3">
+                    <div class="book" style="transform: rotateY(26deg) translateZ(200px);" onclick="openModal('path/to/class8_book3.pdf')">
+                        <img src="m93.jpg" alt="Class 8 Book 3">
                     </div>
-                    <div class="book" style="transform: rotateY(90deg) translateZ(200px);" onclick="openModal('path/to/class8_book4.pdf')">
-                        <img src="lib8 (3).jpg" alt="Class 8 Book 4">
+                    <div class="book" style="transform: rotateY(39deg) translateZ(200px);" onclick="openModal('path/to/class8_book4.pdf')">
+                        <img src="m94.jpg" alt="Class 8 Book 4">
                     </div>
-                    <div class="book" style="transform: rotateY(120deg) translateZ(200px);" onclick="openModal('path/to/class8_book5.pdf')">
-                        <img src="lib8 (4).jpg" alt="Class 8 Book 5">
+                    <div class="book" style="transform: rotateY(52deg) translateZ(200px);" onclick="openModal('path/to/class8_book5.pdf')">
+                        <img src="m95.jpg" alt="Class 8 Book 5">
                     </div>
                 
-                    <div class="book" style="transform: rotateY(150deg) translateZ(200px);" onclick="openModal('path/to/class8_book5.pdf')">
-                        <img src="lib8 (6).jpg" alt="Class 8 Book 6">
+                    <div class="book" style="transform: rotateY(65deg) translateZ(200px);" onclick="openModal('path/to/class8_book5.pdf')">
+                        <img src="m96.jpg" alt="Class 8 Book 6">
                     </div>
-                    <div class="book" style="transform: rotateY(180deg) translateZ(200px);" onclick="openModal('path/to/class8_book5.pdf')">
-                        <img src="lib8 (7).jpg" alt="Class 8 Book 7">
+                    <div class="book" style="transform: rotateY(78deg) translateZ(200px);" onclick="openModal('path/to/class8_book5.pdf')">
+                        <img src="m97.jpg" alt="Class 8 Book 7">
                     </div>
-                    <div class="book" style="transform: rotateY(210deg) translateZ(200px);" onclick="openModal('path/to/class8_book5.pdf')">
-                        <img src="lib8 (8).jpg" alt="Class 8 Book 8">
+                    <div class="book" style="transform: rotateY(91deg) translateZ(200px);" onclick="openModal('path/to/class8_book5.pdf')">
+                        <img src="m98.jpg" alt="Class 8 Book 8">
                     </div>
-                    <div class="book" style="transform: rotateY(240deg) translateZ(200px);" onclick="openModal('path/to/class8_book5.pdf')">
-                        <img src="lib8 (9).jpg" alt="Class 8 Book 9">
+                    <div class="book" style="transform: rotateY(104deg) translateZ(200px);" onclick="openModal('path/to/class8_book5.pdf')">
+                        <img src="m910.jpg" alt="Class 8 Book 9">
                     </div>
-                    <div class="book" style="transform: rotateY(270deg) translateZ(200px);" onclick="openModal('path/to/class8_book5.pdf')">
-                        <img src="lib8 (10).jpg" alt="Class 8 Book 10">
+                    <div class="book" style="transform: rotateY(117deg) translateZ(200px);" onclick="openModal('path/to/class8_book5.pdf')">
+                        <img src="m911.jpg" alt="Class 8 Book 10">
                     </div>
-                    <div class="book" style="transform: rotateY(300deg) translateZ(200px);" onclick="openModal('path/to/class8_book5.pdf')">
-                        <img src="lib8 (11).jpg" alt="Class 8 Book 11">
+                    <div class="book" style="transform: rotateY(130deg) translateZ(200px);" onclick="openModal('path/to/class8_book5.pdf')">
+                        <img src="m912.jpg" alt="Class 8 Book 11">
+                    </div>
+                    <div class="book" style="transform: rotateY(143deg) translateZ(200px);" onclick="openModal('path/to/class8_book5.pdf')">
+                        <img src="m913.jpg" alt="Class 8 Book 11">
+                    </div>
+                    <div class="book" style="transform: rotateY(156deg) translateZ(200px);" onclick="openModal('path/to/class8_book1.pdf')">
+                        <img src="s91.jpg" alt="Class 8 Book 1">
+                    </div>
+                    <div class="book" style="transform: rotateY(169deg) translateZ(200px);" onclick="openModal('path/to/class8_book2.pdf')">
+                        <img src="s92.jpg" alt="Class 8 Book 2">
+                    </div>
+                    <div class="book" style="transform: rotateY(182deg) translateZ(200px);" onclick="openModal('path/to/class8_book3.pdf')">
+                        <img src="s93.jpg" alt="Class 8 Book 3">
+                    </div>
+                    <div class="book" style="transform: rotateY(195deg) translateZ(200px);" onclick="openModal('path/to/class8_book4.pdf')">
+                        <img src="s94.jpg" alt="Class 8 Book 4">
+                    </div>
+                    <div class="book" style="transform: rotateY(208deg) translateZ(200px);" onclick="openModal('path/to/class8_book5.pdf')">
+                        <img src="s95.jpg" alt="Class 8 Book 5">
+                    </div>
+                
+                    <div class="book" style="transform: rotateY(221deg) translateZ(200px);" onclick="openModal('path/to/class8_book5.pdf')">
+                        <img src="s96.jpg" alt="Class 8 Book 6">
+                    </div>
+                    <div class="book" style="transform: rotateY(234deg) translateZ(200px);" onclick="openModal('path/to/class8_book5.pdf')">
+                        <img src="s97.jpg" alt="Class 8 Book 7">
+                    </div>
+                    <div class="book" style="transform: rotateY(247deg) translateZ(200px);" onclick="openModal('path/to/class8_book5.pdf')">
+                        <img src="s98.jpg" alt="Class 8 Book 8">
+                    </div>
+                    <div class="book" style="transform: rotateY(260deg) translateZ(200px);" onclick="openModal('path/to/class8_book5.pdf')">
+                        <img src="s910.jpg" alt="Class 8 Book 9">
+                    </div>
+                    <div class="book" style="transform: rotateY(273deg) translateZ(200px);" onclick="openModal('path/to/class8_book5.pdf')">
+                        <img src="s911.jpg" alt="Class 8 Book 10">
+                    </div>
+                    <div class="book" style="transform: rotateY(286deg) translateZ(200px);" onclick="openModal('path/to/class8_book5.pdf')">
+                        <img src="s912.jpg" alt="Class 8 Book 11">
+                    </div>
+                    <div class="book" style="transform: rotateY(299deg) translateZ(200px);" onclick="openModal('path/to/class8_book5.pdf')">
+                        <img src="s913.jpg" alt="Class 8 Book 11">
                     </div>
                 </div>
                 <button class="button left" onclick="rotateLeft('carouselContent8')">&lt;</button>
@@ -201,26 +241,83 @@
             <div class="carousel-container" id="carousel9">
                 <div class="carousel" id="carouselContent9">
                     <div class="book" style="transform: rotateY(0deg) translateZ(200px);" onclick="openModal('path/to/class9_book1.pdf')">
-                        <img src="lib9 (5).jpg" alt="Class 9 Book 1">
+                        <img src="m101.jpg" alt="Class 9 Book 1">
                     </div>
-                    <div class="book" style="transform: rotateY(30deg) translateZ(200px);" onclick="openModal('path/to/class9_book2.pdf')">
-                        <img src="lib9 (4).jpg" alt="Class 9 Book 2">
+                    <div class="book" style="transform: rotateY(13deg) translateZ(200px);" onclick="openModal('path/to/class9_book2.pdf')">
+                        <img src="m103.jpg" alt="Class 9 Book 2">
                     </div>
-                    <div class="book" style="transform: rotateY(60deg) translateZ(200px);" onclick="openModal('path/to/class9_book3.pdf')">
-                        <img src="lib9 (3).jpg" alt="Class 9 Book 3">
+                    <div class="book" style="transform: rotateY(26deg) translateZ(200px);" onclick="openModal('path/to/class9_book3.pdf')">
+                        <img src="m103.jpg" alt="Class 9 Book 3">
                     </div>
-                    <div class="book" style="transform: rotateY(90deg) translateZ(200px);" onclick="openModal('path/to/class9_book4.pdf')">
-                        <img src="lib9 (2).jpg" alt="Class 9 Book 4">
+                    <div class="book" style="transform: rotateY(39deg) translateZ(200px);" onclick="openModal('path/to/class9_book4.pdf')">
+                        <img src="m104.jpg" alt="Class 9 Book 4">
                     </div>
-                    <div class="book" style="transform: rotateY(120deg) translateZ(200px);" onclick="openModal('sci.pdf')">
-                        <img src="lib9 (1).jpg" alt="Class 9 Book 5">
+                    <div class="book" style="transform: rotateY(52deg) translateZ(200px);" onclick="openModal('sci.pdf')">
+                        <img src="m105.jpg" alt="Class 9 Book 5">
                     </div>  
-                        <div class="book" style="transform: rotateY(150deg) translateZ(200px);" onclick="openModal('sci.pdf')">
-                            <img src="lib9 (6).jpg" alt="Class 9 Book 5">
+                        <div class="book" style="transform: rotateY(65deg) translateZ(200px);" onclick="openModal('sci.pdf')">
+                            <img src="m106.jpg" alt="Class 9 Book 5">
                         </div> 
-                        <div class="book" style="transform: rotateY(180deg) translateZ(200px);" onclick="openModal('sci.pdf')">
-                            <img src="lib9 (7).jpg" alt="Class 9 Book 5">
+                        <div class="book" style="transform: rotateY(78deg) translateZ(200px);" onclick="openModal('sci.pdf')">
+                            <img src="m107.jpg" alt="Class 9 Book 5">
                         </div>
+                        <div class="book" style="transform: rotateY(91deg) translateZ(200px);" onclick="openModal('path/to/class9_book1.pdf')">
+                            <img src="m108.jpg" alt="Class 9 Book 1">
+                        </div>
+                        <div class="book" style="transform: rotateY(104deg) translateZ(200px);" onclick="openModal('path/to/class9_book2.pdf')">
+                            <img src="m109.jpg" alt="Class 9 Book 2">
+                        </div>
+                        <div class="book" style="transform: rotateY(117deg) translateZ(200px);" onclick="openModal('path/to/class9_book3.pdf')">
+                            <img src="m1010.jpg" alt="Class 9 Book 3">
+                        </div>
+                        <div class="book" style="transform: rotateY(130deg) translateZ(200px);" onclick="openModal('path/to/class9_book4.pdf')">
+                            <img src="m1011.jpg" alt="Class 9 Book 4">
+                        </div>
+                        <div class="book" style="transform: rotateY(143deg) translateZ(200px);" onclick="openModal('sci.pdf')">
+                            <img src="m1012.jpg" alt="Class 9 Book 5">
+                        </div>  
+                            <div class="book" style="transform: rotateY(156deg) translateZ(200px);" onclick="openModal('sci.pdf')">
+                                <img src="m1013.jpg" alt="Class 9 Book 5">
+                            </div> 
+                            <div class="book" style="transform: rotateY(169deg) translateZ(200px);" onclick="openModal('path/to/class9_book1.pdf')">
+                                <img src="s101.jpg" alt="Class 9 Book 1">
+                            </div>
+                            <div class="book" style="transform: rotateY(182deg) translateZ(200px);" onclick="openModal('path/to/class9_book2.pdf')">
+                                <img src="s102.jpg" alt="Class 9 Book 2">
+                            </div>
+                            <div class="book" style="transform: rotateY(195deg) translateZ(200px);" onclick="openModal('path/to/class9_book3.pdf')">
+                                <img src="s103.jpg" alt="Class 9 Book 3">
+                            </div>
+                            <div class="book" style="transform: rotateY(208deg) translateZ(200px);" onclick="openModal('path/to/class9_book4.pdf')">
+                                <img src="s104.jpg" alt="Class 9 Book 4">
+                            </div>
+                            <div class="book" style="transform: rotateY(221deg) translateZ(200px);" onclick="openModal('sci.pdf')">
+                                <img src="s105.jpg" alt="Class 9 Book 5">
+                            </div>  
+                                <div class="book" style="transform: rotateY(234deg) translateZ(200px);" onclick="openModal('sci.pdf')">
+                                    <img src="s106.jpg" alt="Class 9 Book 5">
+                                </div> 
+                                <div class="book" style="transform: rotateY(247deg) translateZ(200px);" onclick="openModal('sci.pdf')">
+                                    <img src="s107.jpg" alt="Class 9 Book 5">
+                                </div>
+                                <div class="book" style="transform: rotateY(260deg) translateZ(200px);" onclick="openModal('path/to/class9_book1.pdf')">
+                                    <img src="s108.jpg" alt="Class 9 Book 1">
+                                </div>
+                                <div class="book" style="transform: rotateY(273deg) translateZ(200px);" onclick="openModal('path/to/class9_book2.pdf')">
+                                    <img src="s109.jpg" alt="Class 9 Book 2">
+                                </div>
+                                <div class="book" style="transform: rotateY(286deg) translateZ(200px);" onclick="openModal('path/to/class9_book3.pdf')">
+                                    <img src="s1010.jpg" alt="Class 9 Book 3">
+                                </div>
+                                <div class="book" style="transform: rotateY(299deg) translateZ(200px);" onclick="openModal('path/to/class9_book4.pdf')">
+                                    <img src="s1011.jpg" alt="Class 9 Book 4">
+                                </div>
+                                <div class="book" style="transform: rotateY(312deg) translateZ(200px);" onclick="openModal('sci.pdf')">
+                                    <img src="s1012.jpg" alt="Class 9 Book 5">
+                                </div>  
+                                    <div class="book" style="transform: rotateY(325deg) translateZ(200px);" onclick="openModal('sci.pdf')">
+                                        <img src="s1013.jpg" alt="Class 9 Book 5">
+                                    </div> 
                     </div>
                 </div>
                 <button class="button left" onclick="rotateLeft('carouselContent9')">&lt;</button>
@@ -246,13 +343,13 @@
         // Function to rotate the carousel left
         function rotateLeft(carouselId) {
             if (carouselId === 'carouselContent8') {
-                currentRotation8 -= 60; // Rotate 60 degrees left
+                currentRotation8 -= 20; // Rotate 60 degrees left
                 document.getElementById(carouselId).style.transform = `rotateY(${currentRotation8}deg)`;
             } else if (carouselId === 'carouselContent9') {
-                currentRotation9 -= 60; // Rotate 60 degrees left
+                currentRotation9 -= 20; // Rotate 60 degrees left
                 document.getElementById(carouselId).style.transform = `rotateY(${currentRotation9}deg)`;
             }else if (carouselId === 'carouselContent10') {
-                currentRotation9 -= 60; // Rotate 60 degrees left
+                currentRotation9 -= 20; // Rotate 60 degrees left
                 document.getElementById(carouselId).style.transform = `rotateY(${currentRotation10}deg)`;
             }
         }
@@ -260,13 +357,13 @@
         // Function to rotate the carousel right
         function rotateRight(carouselId) {
             if (carouselId === 'carouselContent8') {
-                currentRotation8 += 60; // Rotate 60 degrees right
+                currentRotation8 += 20; // Rotate 60 degrees right
                 document.getElementById(carouselId).style.transform = `rotateY(${currentRotation8}deg)`;
             } else if (carouselId === 'carouselContent9') {
-                currentRotation9 += 60; // Rotate 60 degrees right
+                currentRotation9 += 20; // Rotate 60 degrees right
                 document.getElementById(carouselId).style.transform = `rotateY(${currentRotation9}deg)`;
             }else if (carouselId === 'carouselContent10') {
-                currentRotation9 += 60; // Rotate 60 degrees right
+                currentRotation9 +=20; // Rotate 60 degrees right
                 document.getElementById(carouselId).style.transform = `rotateY(${currentRotation10}deg)`;
             }
         }
