--- a/pl9.html
+++ b/pl9.html
@@ -166,7 +166,7 @@
         <div class="heading">Class 9 Playlist</div>
        
         <div class="playlist-item" onclick="toggleTopics(0)">
-            <img src="ts91" alt="Thumbnail 1">
+            <img src="ts91.jpg" alt="Thumbnail 1">
             <div class="title">Chapter 1: Matter in Our Surroundings</div>
             <div class="topic-count">(4 topics)</div>
         </div>
