--- a/lib.html
+++ b/lib.html
@@ -32,7 +32,9 @@
 
         .class-container {
             margin: 70px auto;
-            padding: 20px;
+            height: 200px;
+            width: 400px
+;            padding: 20px;
             background-color: rgba(70, 15, 14, 0.573);
             border-radius: 10px;
             color: #000;
@@ -49,9 +51,9 @@
         .carousel-container {
             position: relative;
             width: 100%;
-            height: 300px; /* Adjust height as needed */
+            height: 100px; /* Adjust height as needed */
             overflow: hidden;
-            perspective: 1000px;
+            perspective: 1200px;
             margin: 0 auto; /* Center horizontally */
         }
 
@@ -65,6 +67,7 @@
             align-items: center;
             height: 100%;
             width: 100%;
+            
             transition: transform 0.5s ease;
         }
 
@@ -74,6 +77,7 @@
             height: 75px; /* Adjust book height as needed */
             border: 1px solid #fff;
             background: #fff;
+           
             border-radius: 10px; /* Book-like shape */
             box-shadow: 0 4px 6px rgba(0, 0, 0, 0.818);
             cursor: pointer;
