--- a/homepage.html
+++ b/homepage.html
@@ -276,7 +276,7 @@
       
     <!-- Header -->
     <header class="header">
-        <a href="home.html" class="logo">PHYZIGS</a>
+        <a href="home.html" class="logo">PHYZIGS welcomes you </a>
        
        </form>
     </header>
