--- a/samp.html
+++ b/samp.html
@@ -34,6 +34,10 @@
             font-size: 2rem;
             text-shadow: 2px 2px 5px rgba(0, 0, 0, 0.6);
         }
+          h1{
+            font-size: 3rem;
+            text-shadow: 2px 2px 5px rgba(0, 0, 0, 0.6);
+        }
         .pdf-container {
             display: grid;
             grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
@@ -77,7 +81,7 @@
 </head>
 <body>
     <header>
-        <h1>Sample Papers</h1>
+        <h1>Sample Papers and Question Bank</h1>
     </header>
     <main>
         <section class="class-section" id="class8">
