--- a/pl8.html
+++ b/pl8.html
@@ -165,7 +165,7 @@
         <div class="heading">Class 8 Playlist</div>
         
         <div class="playlist-item" onclick="toggleTopics(0)">
-            <img src="fp1.png" alt="Thumbnail 1">
+            <img src="fp1.jpg" alt="Thumbnail 1">
             <div class="title">Chapter 1: Force and Pressure</div>
             <div class="topic-count">(6 topics)</div>
         </div>
@@ -179,7 +179,7 @@
         </div>
         
         <div class="playlist-item" onclick="toggleTopics(1)">
-            <img src="ceec.png" alt="Thumbnail 2">
+            <img src="ceec.jpg" alt="Thumbnail 2">
             <div class="title">Chapter 2: Chemical Effects of Electric Current</div>
             <div class="topic-count">(5 topics)</div>
         </div>
