--- a/homepage.html
+++ b/homepage.html
@@ -323,7 +323,7 @@
         <div class="social-buttons">
            <a href="https://www.facebook.com/share/1FiSF8AXBy/" class="btn"><i class="fab fa-facebook-f"></i> Facebook</a>
            <a href="https://wa.me/917735199375" class="btn whatsapp-btn"><i class="fab fa-whatsapp"></i> WhatsApp</a>
-           <a href="https://www.instagram.com/swagat_saha?igsh=eDRoMTJ4eGE0dmc3" class="btn instagram-btn"><i class="fab fa-instagram"></i> Instagram</a>
+           <a href="https://www.instagram.DRoMTJ4eGE0dmc3" class="btn instagram-btn"><i class="fab fa-instagram"></i> Instagram</a>
         </div>
      </div>
  
