--- a/pl9.html
+++ b/pl9.html
@@ -171,10 +171,10 @@
             <div class="topic-count">(4 topics)</div>
         </div>
         <div class="topics" id="topics-0">
-            <button class="topic" onclick="openModal('topic1')">Physical nature of matter</button>
-            <button class="topic" onclick="openModal('topic2')">States of matter</button>
-            <button class="topic" onclick="openModal('topic3')">Change of state of matter</button>
-            <button class="topic" onclick="openModal('topic4')">Evaporation</button>
+            <button class="topic" onclick="openModal('topic1')">class 1 </button>
+            <button class="topic" onclick="openModal('topic2')">class 2</button>
+            <button class="topic" onclick="openModal('topic3')">class 3</button>
+            <button class="topic" onclick="openModal('topic4')">class 4</button>
         </div>
         
 
