--- a/pl10.html
+++ b/pl10.html
@@ -172,10 +172,10 @@
             <div class="topic-count">(4 topics)</div>
         </div>
         <div class="topics" id="topics-0">
-            <button class="topic" onclick="openModal('topic1')">Types of chemical reactions</button>
-            <button class="topic" onclick="openModal('topic2')">Balanced chemical equations</button>
-            <button class="topic" onclick="openModal('topic3')">Effects of oxidation and reduction</button>
-            <button class="topic" onclick="openModal('topic4')">Corrosion and rancidity</button>
+            <button class="topic" onclick="openModal('topic1')">class 1</button>
+            <button class="topic" onclick="openModal('topic2')">class 2</button>
+            <button class="topic" onclick="openModal('topic3')">class 3</button>
+            <button class="topic" onclick="openModal('topic4')">class 4</button>
         </div>
         
       
