--- a/lib.html
+++ b/lib.html
@@ -159,7 +159,7 @@
             <h2>Class 9</h2>
             <div class="carousel-container" id="carousel8">
                 <div class="carousel" id="carouselContent8">
-                    <div class="book" style="transform: rotateY(0deg) translateZ(200px);" onclick="openModal('path/to/class8_book1.pdf')">
+                    <div class="book" style="transform: rotateY(0deg) translateZ(200px);" onclick="openModal('path/to/.pdf')">
                         <img src="m91.jpg" alt="Class 8 Book 1">
                     </div>
                     <div class="book" style="transform: rotateY(13deg) translateZ(200px);" onclick="openModal('path/to/class8_book2.pdf')">
@@ -196,7 +196,7 @@
                     <div class="book" style="transform: rotateY(143deg) translateZ(200px);" onclick="openModal('path/to/class8_book5.pdf')">
                         <img src="m913.jpg" alt="Class 8 Book 11">
                     </div>
-                    <div class="book" style="transform: rotateY(156deg) translateZ(200px);" onclick="openModal('path/to/class8_book1.pdf')">
+                    <div class="book" style="transform: rotateY(156deg) translateZ(200px);" onclick="openModal('path/to/s91.pdf')">
                         <img src="s91.jpg" alt="Class 8 Book 1">
                     </div>
                     <div class="book" style="transform: rotateY(169deg) translateZ(200px);" onclick="openModal('path/to/class8_book2.pdf')">
@@ -283,7 +283,7 @@
                             <div class="book" style="transform: rotateY(156deg) translateZ(200px);" onclick="openModal('sci.pdf')">
                                 <img src="m1013.jpg" alt="Class 9 Book 5">
                             </div> 
-                            <div class="book" style="transform: rotateY(169deg) translateZ(200px);" onclick="openModal('path/to/class9_book1.pdf')">
+                            <div class="book" style="transform: rotateY(169deg) translateZ(200px);" onclick="openModal('path/to/s101.pdf')">
                                 <img src="s101.jpg" alt="Class 9 Book 1">
                             </div>
                             <div class="book" style="transform: rotateY(182deg) translateZ(200px);" onclick="openModal('path/to/class9_book2.pdf')">
