--- a/pl10.html
+++ b/pl10.html
@@ -234,7 +234,7 @@
 
         function createModals() {
             const modalData = [
-                {id: 'topic1', videoUrl: 'https://youte=sh', classNotes: 'p.pdf', referenceNotes: 'f.pdf', easyTest: 'ep1.html', mediumTest: 'eap1.html', hardTest: 'eas1.html'},
+                {id: 'topic1', videoUrl: 'https://youtu.be/wjN7jLdAKYg?si=oXEMIWIlzpyL4ji9', classNotes: 'p.pdf', referenceNotes: 'f.pdf', easyTest: 'ep1.html', mediumTest: 'eap1.html', hardTest: 'eas1.html'},
                 {id: 'topic2', videoUrl: 'https://www.youtube.com/watch?v=video2', classNotes: 'class_notes2.pdf', referenceNotes: 'reference_notes2.pdf', easyTest: 'easy_test_topic2.html', mediumTest: 'medium_test_topic2.html', hardTest: 'hard_test_topic2.html'},
                 {id: 'topic3', videoUrl: 'https://www.youtube.com/watch?v=video3', classNotes: 'class_notes3.pdf', referenceNotes: 'reference_notes3.pdf', easyTest: 'easy_test_topic3.html', mediumTest: 'medium_test_topic3.html', hardTest: 'hard_test_topic3.html'},
                 {id: 'topic4', videoUrl: 'https://www.youtube.com/watch?v=video4', classNotes: 'class_notes4.pdf', referenceNotes: 'reference_notes4.pdf', easyTest: 'easy_test_topic4.html', mediumTest: 'medium_test_topic4.html', hardTest: 'hard_test_topic4.html'},
