--- a/lib.html
+++ b/lib.html
@@ -196,7 +196,7 @@
                     <div class="book" style="transform: rotateY(143deg) translateZ(200px);" onclick="openModal('path/to/class8_book5.pdf')">
                         <img src="m913.jpg" alt="Class 8 Book 11">
                     </div>
-                    <div class="book" style="transform: rotateY(156deg) translateZ(200px);" onclick="openModal('path/to/s91.pdf')">
+                    <div class="book" style="transform: rotateY(156deg) translateZ(200px);" onclick="openModal('s91.pdf')">
                         <img src="s91.jpg" alt="Class 8 Book 1">
                     </div>
                     <div class="book" style="transform: rotateY(169deg) translateZ(200px);" onclick="openModal('path/to/class8_book2.pdf')">
